--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan/khan-book.jpg" alt="Обложка книги Весь мир - школа">
-            <a class="khan__buy-link link" href="https://ozon.ru/t/y84lMYj">Купить книгу &rarr;</a>
+            <a class="khan__buy-link link" href="https://ozon.ru/t/y84lMYj">Купить книгу &rarr; target="_blank"</a>
           </div>
         </div>
       </section>
@@ -207,16 +207,16 @@
         <p class=" section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
           <li>
-            <a class="link" href="https://arzamas.academy/"><img class="resources__logo" src="./images/resources/resources-arzamas.svg" alt="логотип просветительского проекта Арзамас"></a>
+            <a class="link" href="https://arzamas.academy/" target="_blank"><img class="resources__logo" src="./images/resources/resources-arzamas.svg" alt="логотип просветительского проекта Арзамас"></a>
           </li>
           <li>
-            <a class="link" href="https://nplus1.ru/"><img class="resources__logo" src="./images/resources/resources-n1.svg" alt="логотип научно-популярного издания n+1"></a>
+            <a class="link" href="https://nplus1.ru/" target="_blank"><img class="resources__logo" src="./images/resources/resources-n1.svg" alt="логотип научно-популярного издания n+1"></a>
           </li>
           <li>
-            <a class="link" href="https://www.strelkainstitute.com/"><img class="resources__logo" src="./images/resources/resources-strelka.svg" alt="логотип института медиа, архитектуры и дизайна Стрелка"></a>
+            <a class="link" href="https://www.strelkainstitute.com/" target="_blank"><img class="resources__logo" src="./images/resources/resources-strelka.svg" alt="логотип института медиа, архитектуры и дизайна Стрелка"></a>
           </li>
           <li>
-            <a class="link" href="https://polka.academy/"><img class="resources__logo" src="./images/resources/resources-polka.svg" alt="логотип образовательного проекта Полка"></a>
+            <a class="link" href="https://polka.academy/" target="_blank"><img class="resources__logo" src="./images/resources/resources-polka.svg" alt="логотип образовательного проекта Полка"></a>
           </li>
         </ul>
       </section>
@@ -240,9 +240,9 @@
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icons" src="./images/logo/youtube-icon.svg" alt="Иконка соцсети">YouTube</a></li>
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icons" src="./images/logo/vk_color_white.svg" alt="Иконка соцсети">ВКонтакте</a></li>
-            <li><a class="footer__column-link" href="#"><img class="footer__social-icons" src="./images/logo/tiktok-icon.svg" alt="Иконка соцсети">TikTok</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icons" src="./images/logo/youtube-icon.svg" alt="Иконка соцсети">YouTube</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icons" src="./images/logo/vk_color_white.svg" alt="Иконка соцсети">ВКонтакте</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icons" src="./images/logo/tiktok-icon.svg" alt="Иконка соцсети">TikTok</a></li>
           </ul>
         </nav>
       </div>
