--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="content">
 
       <!--Description-->
-      <section class="description">
+      <section class="description" aria-label="Главные проблемы в обучении">
         <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
@@ -79,7 +79,7 @@
       </section>
 
       <!--Oakley-->
-      <section class="oakley">
+      <section class="oakley" aria-label="История Барбары Оакли">
         <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
